--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,28 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Node.js specific
+node_modules/
+**/node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+.pnp.*
+.npm
+.eslintcache
+.stylelintcache
+.prettiercache
+.turbo
+.node_repl_history
+*.tgz
+.next/
+out/
+dist/
+build/
