--- a/microboss-frontend/.gitignore
+++ b/microboss-frontend/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+node_modules/
+**/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -12,6 +14,9 @@
 
 # testing
 /coverage
+/.nyc_output
+/cypress/videos/
+/cypress/screenshots/
 
 # next.js
 /.next/
@@ -19,19 +24,39 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
-# env files (can opt-in for committing if needed)
+# env files
 .env*
+!.env.example
+!.env.template
 
 # vercel
 .vercel
@@ -39,3 +64,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Cache directories
+.npm
+.eslintcache
+.stylelintcache
+.prettiercache
+.turbo
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
